# rosplan_inspection

./: CMakeLists.txt  README.md  package.xml  plan.dot
common/: domain.pddl  domain_turtlebot_demo.pddl  plan.pddl  problem.pddl  unsolvable_problem.pddl
config/: waypoints.yaml
launch/: turtlebot.launch  turtlebot3_bringup_sim.launch
maps/: map.pgm  map.yaml
scripts/: turtlebot_explore.bash  turtlebot_explore_common.bash  turtlebot_explore_simple.bash  turtlebot_explore_wp_from_file.bash
