<?xml version="1.0"?>
<package>
  <name>rosplan_inspection</name>
  <version>1.0.0</version>
  <description>
    ROSPlan inspection project in Gazebo with turtlebot3.
  </description>

  <maintainer email="zdz@todo.todo">zdz</maintainer>

  <license>BSD</license>
  <!-- <url type="website">http://github.com/KCL-Planning/rosplan_demos</url> -->
  <author email="zdz@todo.todo">zdz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>turtlebot3_gazebo</run_depend>
  <run_depend>turtlebot3_navigation</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>move_base_msgs</run_depend>

</package>
